Logica de operacion culminado

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <h1>Sesion 27 - Angular Test</h1>
 </div>
 
-<div class="mt-5 bg-blue-200 py-2 w-[40%] mx-auto">
+<div class="mt-5 bg-blue-100 py-2 w-[40%] mx-auto">
   <div class="flex justify-center mt-2">
     <div class="mb-3 xl:w-40">
       <input
@@ -12,7 +12,6 @@
         placeholder="Primer numero"
       />
     </div>
-    {{numero1}}
     <div class="mb-3 xl:w-40 ml-3">
       <input
         type="text"
@@ -21,7 +20,6 @@
         placeholder="Segundo numero"
       />
     </div>
-    {{numero2}}
   </div>
   <div class="flex justify-center">
     <div class="mb-3 xl:w-[55%]">
@@ -34,7 +32,6 @@
           <option value="*">Multiplicaion</option>
           <option value="/">Division</option>
         </select>
-        {{option}}
       </div>
   </div>
   <div class="flex justify-center">
@@ -43,6 +40,7 @@
     class="bg-blue-500 px-5 py-1 rounded-lg hover:bg-green-600 text-white font-mono font-semibold"
     >Calcular</button>
   </div>
-
-  {{result}}
+  <div class="flex justify-center mt-3 shadow-xl w-3/5 mx-auto bg-blue-200 py-2 rounded-lg">
+    El resultado de la operacion :{{result}}
+  </div>
 </div>
