--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="bg-red-200 py-3">
+<div class="bg-red-200 py-3 flex justify-center">
   <h1>Sesion 27 - Angular Test</h1>
 </div>
 
@@ -36,7 +36,7 @@
   </div>
   <div class="flex justify-center">
     <button 
-    (click)="onCalcular()"
+    (click)="onCalcular(numero1,numero2,option)"
     class="bg-blue-500 px-5 py-1 rounded-lg hover:bg-green-600 text-white font-mono font-semibold"
     >Calcular</button>
   </div>
